jena-shex/src/test/files/shexTest/negativeStructure/referencedShapeExprNotFound.shex
# Referenced expression missing
<http://a.example/S> {<http://a.example/p> .} AND @<http://a.example/S1> 

